@@ -2,6 +2,8 @@ Bugs/Urgent:
 
  * find a good replacement for question marks in file names to make Android happy.
 
+ * pass the --device option to cdparanoia/icedax
+
 Nice to have:
 
  * suggest to refresh the release JSON if it doesn't point back to the disc
