@@ -32,13 +32,14 @@ let encoders =
 
 type extra_args =
   { cdparanoia : string list;
+    use_icedax : bool;
     opus : string list;
     vorbis : string list;
     flac : string list;
     mp3 : string list }
 
 let default_extra_args =
-  { cdparanoia = []; opus = []; vorbis = []; flac = []; mp3 = [] }
+  { cdparanoia = []; use_icedax = false; opus = []; vorbis = []; flac = []; mp3 = [] }
 
 (** We use a prefix for the WAV file, because discids can start with a period. *)
 let wav_prefix = "cd-"
@@ -170,13 +171,20 @@ let mp3enc ?verbose ?dry ~bitrate tags ~input ~output () =
 let wav_name d i =
   Printf.sprintf "%s%s%02d.wav" wav_prefix d.Tagged.discid i
 
-let rip_track ?verbose ?dry ?(force=false) ?(extra_args=[]) d i =
+let rip_synchronously ?verbose ?dry ?(extra_args=[]) ?(use_icedax=false) i wav =
+  if use_icedax then
+    let args = extra_args @ ["-O"; "wav"; "-t"; string_of_int i; wav] in
+    synchronously ?verbose ?dry "icedax" args
+  else
+    let args = extra_args @ ["-w"; string_of_int i; wav] in
+    synchronously ?verbose ?dry "cdparanoia" args
+
+let rip_track ?verbose ?dry ?(force=false) ?use_icedax ?extra_args d i =
   let wav = wav_name d i in
-  let args = extra_args @ ["-w"; string_of_int i; wav] in
   if Sys.file_exists wav then
     if Sys.is_regular_file wav then
       if force then
-        synchronously ?verbose ?dry "cdparanoia" args
+        rip_synchronously ?verbose ?dry ?use_icedax ?extra_args i wav
       else
         begin
           Printf.printf "not ripping %s again\n" wav;
@@ -186,7 +194,7 @@ let rip_track ?verbose ?dry ?(force=false) ?(extra_args=[]) d i =
     else
       Error (Printf.sprintf "%s exists and is not a regular file" wav)
   else
-    synchronously ?verbose ?dry "cdparanoia" args
+    rip_synchronously ?verbose ?dry ?use_icedax ?extra_args i wav
 
 let encode_track ?dry ?verbose bitrate encoders dir d t =
   let album = List.hd d.Tagged.titles |> Tagged.title_to_string
@@ -273,8 +281,11 @@ let execute ?dry ?verbose ?directory extra_args ~bitrate encoders d =
   let open Result.Syntax in
   let* () = chdir ?dry ?verbose ?directory () in
   let* () =
-    let extra_args = extra_args.cdparanoia in
-    Tagged.iter_tracks (fun t -> rip_track ?verbose ?dry ~extra_args d t.Track.number_on_disc) d in
+    let use_icedax = extra_args.use_icedax
+    and extra_args = extra_args.cdparanoia in
+    Tagged.iter_tracks
+      (fun t -> rip_track ?verbose ?dry ~use_icedax ~extra_args d t.Track.number_on_disc)
+      d in
   let root, dir = Tagged.target_dir d in
   let* () = mkdir ?dry ?verbose root in
   let* () = mkdir ?dry ?verbose dir in
